--- a/styles/principal.css
+++ b/styles/principal.css
@@ -1,6 +1,6 @@
 header{
 display: flexbox;
-width: 1439px;
+width: 100%;
 height: 120px;
 left: 1px;
 top: 0px;
@@ -11,3 +11,4 @@ colorTexto-header{
 color: white;
     
 }
+
