creando estilo tarjeta

--- a/styles/principal.css
+++ b/styles/principal.css
@@ -11,8 +11,41 @@ color: white;
     
 }
 
-.seccion-catalogo{
+/*catalogo */
+.catalogo-parte-arriba{
+    text-align: center;
+    border-style: dotted;
+    background: linear-gradient(90deg, #E9A426 -5.56%, #F9B50B 40.76%);
+    margin: 0;
+
+}
+
+
+.catalogo-parte-abajo{
+    border-style: dashed;
+    background: linear-gradient(90deg, #E9A426 -5.56%, #F9B50B 40.76%);
+    justify-content: center;
+
+}
+
+.titulo-catalogo{
+    border-style: dashed;
     background: #003087;
+    margin: 10% 30% 0 30%;
+}
+.subtitulo-catalogo{
+    border-style: solid;
+    border-color: antiquewhite;
+    background: #E9A426;
+
+    margin: 0 30% 0 30%;
+}
+
+.seccion-catalogo{
+    border-style: dashed;
+    width: 40%;
+    background: white;
+    justify-content: end;
 
 }
 
