--- a/styles/principal.css
+++ b/styles/principal.css
@@ -12,8 +12,24 @@ color: white;
     
 }
 
+.caja-articulos{
+    display: flex;
+    justify-content: space-between;
+}
+
 /*catalogo */
 .caja-catalogo{
-    border-style: inset;
+    width: 30%;
+    border-style: solid;
+    border-radius: 15px;
+    border-width: 1px;
+    text-align: center;
+    margin: 0 0 2rem 0;
+    padding: 0 0 1rem 0;
 }
+
+.boton-catalogo{
+    background: #E9A426;
+}
+
 
