--- a/styles/principal.css
+++ b/styles/principal.css
@@ -10,6 +10,23 @@ left: 1px;
 top: 0px;
 background: linear-gradient(90deg, #E9A426 -5.56%, #F9B50B 40.76%);
 justify-content: space-between;
+font-size: 1.5rem;
+}
+
+.fondo-oscuro {
+    filter: brightness(60%);
+}
+
+.centrado{
+    width: 80%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-weight: 700;
+    font-size: 3rem;
+    color: beige;
+    text-align: center;
 }
 
 .colorTexto-header{
@@ -53,4 +70,14 @@ color: white;
     background: #E9A426;
 }
 
+
+footer{
+    display: flex;
+    flex: 0;
+    justify-content: center;
+    align-items: center;
+    height: 80px;
+    color: white;
+    background-color: black;
+}
 
