--- a/styles/principal.css
+++ b/styles/principal.css
@@ -1,7 +1,3 @@
-*{
-    margin: 2px;
-
-}
 
 
 header{
@@ -10,10 +6,12 @@ width: 100%;
 height: 120px;
 left: 1px;
 top: 0px;
+
 background: linear-gradient(90deg, #E9A426 -5.56%, #F9B50B 40.76%);
 justify-content: space-between;
 font-size: 1.5rem;
 }
+
 
 .fondo-oscuro {
     filter: brightness(60%);
@@ -43,8 +41,10 @@ color: white;
 }
 
 .caja-productos-clasificado{
+    margin: 2rem 0 2rem 0;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
+
 
 
 }
@@ -86,4 +86,13 @@ footer{
     color: white;
     background-color: black;
 }
+
+
+/*enunciado*/
+.enunciado, h3, h6{
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    margin: 4rem 0 4rem 0;
+    font-size: 2rem;
+}
+
 
