--- a/styles/principal.css
+++ b/styles/principal.css
@@ -106,4 +106,8 @@ footer{
     box-shadow: 2.9px 5.8px 5.8px hsl(0deg 0% 0% / 0.41);
 }
 
+.titulosPrincipales{
+    background-color: rgb(233, 164, 38);
+}
+
 
