--- a/styles/principal.css
+++ b/styles/principal.css
@@ -100,6 +100,7 @@ footer{
     margin: 4rem 1rem 4rem 1rem;
     text-align: center;
     font-size: 2rem;
+    font-size: x-large;
     
 }
 .enunciado{
