--- a/styles/principal.css
+++ b/styles/principal.css
@@ -6,7 +6,6 @@ width: 100%;
 height: 120px;
 left: 1px;
 top: 0px;
-
 background: linear-gradient(90deg, #E9A426 -5.56%, #F9B50B 40.76%);
 justify-content: space-between;
 font-size: 1.5rem;
@@ -73,6 +72,7 @@ color: white;
 
 .caja-carrusel{
     justify-content: space-evenly;
+    margin-bottom: 5%;
 }
 .caja-carrusel-catalogo{
     margin: 0 0 0 30px;
@@ -108,20 +108,27 @@ footer{
 
 
 /*enunciado*/
-.enunciado, h3, h6{
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    margin: 4rem 1rem 4rem 1rem;
-    text-align: center;
-    font-size: 2rem;
-    font-size: x-large;
-    
-}
 .enunciado{
-    box-shadow: 2.9px 5.8px 5.8px hsl(0deg 0% 0% / 0.41);
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    position: relative;
+    display: block;
+    background: #09F;
+    color: #FFF;
+    text-align: center;
+    overflow: hidden;
+    margin-bottom: 5%;
+
+
+}
+
+
+h6{
+    font-size: 1rem;
+    margin: 4rem 1.25rem 2.5rem 1.25rem;
+
 }
 
 .titulosPrincipales{
     background-color: rgb(233, 164, 38);
 }
-
 
