--- a/styles/principal.css
+++ b/styles/principal.css
@@ -49,8 +49,10 @@ color: white;
     display: flex;
 
     text-align: center;
+}
 
-
+.caja-productos-clasificado a{
+text-decoration: none;
 
 }
 
@@ -58,13 +60,15 @@ color: white;
     align-content: center;
     justify-content: space-evenly;
 
-
 }
 
-.caja-producto-unidad img{
+
+
+.caja-producto-unidad a img{
     height: 90%;
     width: 90%;
     object-fit: cover;
+
 
 }
 
@@ -80,10 +84,10 @@ color: white;
     margin: 0 0 0 30px;
 }
 .caja-catalogo{
-    width: 70%;
+    width: 60%;
     border-style: solid;
     border-radius: 15px;
-    border-width: 4px;
+    border-width: 2px;
     text-align: center;
     margin: 0 0 2rem 0;
     padding: 0 0 1rem 0;
@@ -94,8 +98,10 @@ color: white;
 }
 
 
+
 .boton-catalogo{
     background: #E9A426;
+
 }
 
 
@@ -113,11 +119,12 @@ footer{
 
 .main-catalogo{
     text-align: center;
-    margin: 10% 3%;
+    margin: 2% 3%;
 }
 .main-catalogo h1{
 
-    margin: 10% 3%;
+    margin: 8% 3%;
+    text-align: center;
 }
 
 
